[package]
name = "tinyevm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "*"
hex = "*"
sha3 = "*"
leveldb = "*"
db-key = "*"
tempdir = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
